deployment-bening.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ancile-benign
spec:
  selector:
    matchLabels:
      app: ancile-benign
  replicas: 4 
  template:
    metadata:
      labels:
        app: ancile-benign
    spec:
      containers:
      - image: nherbaut/ancile-malicious:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 256m
            memory: 256Mi
          limits:
            cpu: 512m
            memory: 512Mi
        imagePullPolicy: Always
        name: ancile-benign
