ancile-default-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "ancile-talks-world"
spec:
  endpointSelector:
    matchLabels:
      app: ancile-malicious
  egress:
    - toEntities:
      - world
